# Chimera

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  imgui.ini  windows-toolchain.cmake
GraphicModules/chDX12Graphics/: CMakeLists.txt
GraphicModules/chDX12Graphics/src/GraphicsSystem/: chDX12GPUBuffer.cpp  chDX12GPUBuffer.h  chDX12GPUCommandBuffer.cpp  (+23 more)
GraphicModules/chVulkanGraphics/: CMakeLists.txt
GraphicsAPIs/chVulkan/: CMakeLists.txt
GraphicsAPIs/chVulkan/src/: chLoadGraphicsAPI.cpp  chVulkanAPI.cpp  chVulkanAPI.h  chVulkanBuffer.cpp  chVulkanCommandBuffer.cpp  chVulkanCommandBuffer.h  chVulkanCommandPool.cpp  chVulkanCommandPool.h  chVulkanCommandQueue.cpp  chVulkanCommandQueue.h  chVulkanDescriptorPool.cpp  chVulkanDescriptorPool.h  chVulkanDescriptorSet.h  chVulkanFrameBuffer.cpp  chVulkanFrameBuffer.h  chVulkanPipeline.cpp  chVulkanPipeline.h  chVulkanPipelineLayout.cpp  chVulkanPipelineLayout.h  chVulkanPrerequisites.h  chVulkanRenderPass.cpp  chVulkanRenderPass.h  chVulkanShader.cpp  chVulkanShader.h  chVulkanSwapChain.cpp  chVulkanSwapChain.h  chVulkanSynchronization.cpp  chVulkanSynchronization.h  chVulkanTexture.cpp  chVulkanTexture.h  chVulkanTextureView.cpp  chVulkanTextureView.h
Importers/chImageImporter/: CMakeLists.txt
Importers/chImageImporter/src/: chImageImporter.cpp  chImageImporter.h  chLoadImporter.cpp
Importers/chMeshImporter/: CMakeLists.txt
Importers/chMeshImporter/src/: chLoadImporter.cpp  chMeshImporter.cpp  chMeshImporter.h
chCodecs/chMeshCodec/: CMakeLists.txt
chCodecs/chMeshCodec/src/: chLoadMeshCodec.cpp  chMeshCodec.cpp  chMeshCodec.h
chCore/: CMakeLists.txt
chCore/Content/Fonts/: IconsFontAwsome5.h
chCore/Content/Shaders/: GBufferVertex.glsl  cubeVertex.glsl
chCore/Content/shaders/: cubeVertex.spv  triangleVertex.glsl
chCore/CoreAssets/shaders/: GBufferFragment.glsl  GBufferFragment.spv  GBufferVertex.spv  cubeFragment.glsl  cubeFragment.spv
chCore/src/Applications/: chBaseApplication.cpp  chBaseApplication.h  chWindowedApplication.cpp  chWindowedApplication.h
chCore/src/AssetManagment/: chAssetManager.cpp  chAssetManager.h  chAssetRegister.h  chAssetTypeTraits.h  chIAsset.cpp  chIAsset.h  chModelAsset.h  chSupportedImport.h
chCore/src/BaseApplication/: chBaseApplication.cpp  chBaseApplication.h
chCore/src/Graphics/: chGraphicsTypes.h  chIBuffer.h  chICommandBuffer.h  chICommandPool.h  chICommandQueue.h  chIDescriptorPool.h  chIDescriptorSet.h  chIDescriptorSetLayout.h  chIFrameBuffer.h  chIGraphicsAPI.h  chIPipeline.h  chIPipelineLayout.h  chIRenderPass.h  chISampler.h  chIShader.h  chISwapChain.h  chISynchronization.h  chITexture.h  chITextureView.h  chVertexLayout.cpp  chVertexLayout.h
chCore/src/GraphicsSystem/: chGraphicsModule.cpp  chGraphicsModule.h  chPrerequisitesGraphics.h  chSwapChain.cpp  chSwapChain.h
chCore/src/Platform/: chEnginePaths.cpp  chEnginePaths.h
chCore/src/Renderer/: chCamera.cpp  chCamera.h  chIRenderer.h  chMultiStageRenderer.cpp  chMultiStageRenderer.h  chNastyRenderer.cpp  chNastyRenderer.h  chRenderStage.h  chRenderStageFactory.h  chRenderStageIO.h  chRenderer.cpp  chRenderer.h  chRendererPresenter.h
chCore/src/Resources/: chMesh.cpp  chMesh.h  chMeshManager.cpp  chMeshManager.h  chModel.cpp  chModel.h
chCore/src/Scene/: chComponent.h  chGameObject.cpp  chGameObject.h  chObject.h  chScene.cpp  chScene.h  chSceneManager.cpp  chSceneManager.h  chTransform.h
chCore/src/ScreenSystem/: chDisplayEvent.h  chDisplayEventData.h  chDisplayEventHandle.h  chDisplayManager.cpp  chDisplayManager.h  chDisplaySurface.h  chEventDispatcherManager.cpp  chEventDispatcherManager.h  chInputModule.cpp  chInputModule.h  chKeyBoard.h  chResizeDebouncer.cpp  chResizeDebouncer.h  chScreen.h  chScreenEvent.h  chScreenEventData.h  chScreenEventHandle.h  chScreenModule.cpp  chScreenModule.h  chSystemEventDispatcherModule.cpp  chSystemEventDispatcherModule.h
chCore/src/Utils/: chFwdDeclCore.h  chPrerequisitesCore.h  chTypeTraits.h
chCoreTest/: CMakeLists.txt  chCoreTestMain.cpp
chEditor/: CMakeLists.txt  chEditorMain.cpp
chEditor/Content/fonts/: IconsFontAwsome5.h
chEditor/EditorAssets/fonts/: IconsFontAwsome5.h  IconsFontAwsome6.h
chEditor/src/Application/: chEditorApplication.cpp  chEditorApplication.h
chEditor/src/UI/: chContentAssetUI.cpp  chContentAssetUI.h  chEditorSelection.cpp  chEditorSelection.h  chGameObjAssetUI.cpp  chGameObjAssetUI.h  chInspectorUI.cpp  chInspectorUI.h  chMainMenuBarUI.cpp  chMainMenuBarUI.h  chOutputLogUI.cpp  chOutputLogUI.h  chSceneGraphUI.cpp  chSceneGraphUI.h  chUIHelpers.cpp  chUIHelpers.h
chImgui/: CMakeLists.txt
chUtilities/: CMakeLists.txt
chUtilities/src/Image/: chBMPImage.cpp  chBMPImage.h  chColor.cpp  chColor.h  chLinearColor.cpp  chLinearColor.h
chUtilities/src/Math/: chBox.h  chBox2D.cpp  chBox2D.h  chDegree.cpp  chDegree.h  chMath.h  chMatrix4.cpp  chMatrix4.h  chMatrixHelpers.h  chPlane.cpp  chPlane.h  chPlatformMath.cpp  chPlatformMath.h  chQuaternion.cpp  chQuaternion.h  chRadian.cpp  chRadian.h  chRandom.cpp  chRandom.h  chRotator.cpp  chRotator.h  chSphere.cpp  chSphere.h  chSphereBoxBounds.h  chVector2.cpp  chVector2.h  chVector2I.cpp  chVector2I.h  chVector3.cpp  chVector3.h  chVector3I.cpp  chVector3I.h  chVector4.cpp  chVector4.h
chUtilities/src/Platform/: chFileStream.cpp  chFileStream.h  chFileSystem.cpp  chFileSystem.h  chPath.cpp  chPath.h  chPlatformDefines.h  chPlatformTypes.h
chUtilities/src/Prerequisites/: chForwardDecUtil.h  chSTDHeaders.h  chUsing.h
chUtilities/src/Util/: chCommandParser.cpp  chCommandParser.h  chCompressionUtils.cpp  chCompressionUtils.h  chDebug.cpp  chDebug.h  chDynamicLibManager.cpp  chDynamicLibManager.h  chDynamicLibrary.cpp  chDynamicLibrary.h  chEventSystem.h  chException.h  chLog.h  chLogDeclaration.h  chLogLevel.h  chLogger.cpp  chLogger.h  chLoggerUtilInit.cpp  chModule.h  chStringID.cpp  chStringID.h  chStringUtils.cpp  chStringUtils.h  chUUID.cpp  chUUID.h  chUnicode.cpp  chUsing.h
chUtilitiesTest/: CMakeLists.txt  chBitmapTest.cpp  chUtilitiesMain.cpp
(+146 files in other folders)
